--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>513</width>
-    <height>212</height>
+    <height>328</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -38,6 +38,19 @@
     </property>
     <property name="text">
      <string>Podglad</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>160</y>
+      <width>191</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Baza Pacjentów</string>
     </property>
    </widget>
   </widget>
